--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,17 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-snowpack-app" />
-    <title>Snowpack App</title>
+    <title>React Stack Router</title>
+    <meta property="og:title" content="React Stack Router" />
+    <meta name="author" content="Brian Dombrowski" />
+    <meta property="og:locale" content="en_US" />
+    <meta name="description" content="A demo for custom React Routing with stack features and zero-dependencies." />
+    <meta property="og:description" content="A demo for custom React Routing with stack features and zero-dependencies." />
+    <link rel="canonical" href="https://react-stack-router.com" />
+    <meta property="og:url" content="https://react-stack-router.com" />
+    <meta property="og:site_name" content="React Stack Router" />
+    <meta property="og:image" content="https://benevolent.tech/images/benevolent_tech_dc_seo.png" />
+    
     <style>
       body {
         margin: 0;
