--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <meta property="og:title" content="React Stack Router" />
     <meta name="author" content="Brian Dombrowski" />
     <meta property="og:locale" content="en_US" />
-    <meta name="description" content="A demo for custom React Routing with stack features and zero-dependencies." />
-    <meta property="og:description" content="A demo for custom React Routing with stack features and zero-dependencies." />
+    <meta name="description" content="A demo for custom React Routing with stack features and zero-dependencies" />
+    <meta property="og:description" content="A demo for custom React Routing with stack features and zero-dependencies" />
     <link rel="canonical" href="https://react-stack-router.com" />
     <meta property="og:url" content="https://react-stack-router.com" />
     <meta property="og:site_name" content="React Stack Router" />
