--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <meta property="og:url" content="https://react-stack-router.com" />
     <meta property="og:site_name" content="React Stack Router" />
     <meta property="og:image" content="https://benevolent.tech/images/benevolent_tech_dc_seo.png" />
+
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
     
     <style>
       body {
@@ -37,19 +40,15 @@
   </head>
   <body>
     <div id="root"></div>
+    <div
+      style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: -100; display:flex; justifyContent:center; alignItems:center">
+      <div style="margin:auto">
+        <img style="margin:auto" src="/tail-spin.svg" />
+        <div>&nbsp;</div>
+      </div>
+    </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/dist/index.js"></script>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-
     <script src="/browser-check.js" async defer></script>
   </body>
 </html>
