--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="dark">
     <div id="root"></div>
     <div
       style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: -100; display:flex; justifyContent:center; alignItems:center">
