--- a/public/index.html
+++ b/public/index.html
@@ -36,15 +36,8 @@
       }
     </style>
   </head>
-  <body class="dark">
+  <body>
     <div id="root"></div>
-    <div
-      style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: -100; display:flex; justifyContent:center; alignItems:center">
-      <div style="margin:auto">
-        <img style="margin:auto" src="/tail-spin.svg" />
-        <div>&nbsp;</div>
-      </div>
-    </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/dist/index.js"></script>
     <script src="/browser-check.js" async defer></script>
