--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,21 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React Stack Router</title>
-    <meta property="og:title" content="React Stack Router" />
     <meta name="author" content="Brian Dombrowski" />
+    <meta name="theme-color" content="#aaa" />
+
+    <link rel="canonical" href="https://react-stack-router.com" />
+
+
+    <meta property="og:title" content="React Stack Router" />
     <meta property="og:locale" content="en_US" />
     <meta name="description" content="A demo for custom React Routing with stack features and zero-dependencies" />
     <meta property="og:description" content="A demo for custom React Routing with stack features and zero-dependencies" />
-    <link rel="canonical" href="https://react-stack-router.com" />
     <meta property="og:url" content="https://react-stack-router.com" />
     <meta property="og:site_name" content="React Stack Router" />
     <meta property="og:image" content="https://benevolent.tech/images/benevolent_tech_dc_seo.png" />
 
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
     
     <style>
