--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <title>React Stack Router</title>
     <meta name="author" content="Brian Dombrowski" />
     <meta name="theme-color" content="#aaa" />
@@ -24,6 +24,8 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+
+		<link rel="preconnect" href="https://unpkg.com">
   </head>
   <body>
     <div id="root"></div>
