Selfhosting static libs now

--- a/public/index.html
+++ b/public/index.html
@@ -17,15 +17,10 @@
     <meta property="og:description" content="A demo for custom React Routing with stack features and zero-dependencies" />
     <meta property="og:url" content="https://react-stack-router.com" />
     <meta property="og:site_name" content="React Stack Router" />
-    <meta property="og:image" content="https://benevolent.tech/images/benevolent_tech_dc_seo.png" />
+    <meta property="og:image" content="https://react-stack-router.com/apple-touch-icon.png" />
 
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
-
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-
-		<link rel="preconnect" href="https://unpkg.com">
   </head>
   <body>
     <div id="root"></div>
