--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
 
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
+
+		<link rel="stylesheet" type="text/css" href="/css/main.css" />
+
   </head>
   <body>
     <div id="root"></div>
