Replace references of old repo name

--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>React Stack Router</title>
+    <title>Dombro Preact Stack</title>
     <meta name="author" content="Brian Dombrowski" />
     <meta name="theme-color" content="#aaa" />
 
-    <link rel="canonical" href="https://react-stack-router.com" />
+    <link rel="canonical" href="https://dombro-preact-stack.com" />
 
 
-    <meta property="og:title" content="React Stack Router" />
+    <meta property="og:title" content="Dombro Preact Stack" />
     <meta property="og:locale" content="en_US" />
     <meta name="description" content="A demo for custom React Routing with stack features and zero-dependencies" />
     <meta property="og:description" content="A demo for custom React Routing with stack features and zero-dependencies" />
-    <meta property="og:url" content="https://react-stack-router.com" />
-    <meta property="og:site_name" content="React Stack Router" />
-    <meta property="og:image" content="https://react-stack-router.com/apple-touch-icon.png" />
+    <meta property="og:url" content="https://dombro-preact-stack.com" />
+    <meta property="og:site_name" content="Dombro Preact Stack" />
+    <meta property="og:image" content="https://dombro-preact-stack.com/apple-touch-icon.png" />
 
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
